Parser without AST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
-set(SOURCES main.cpp lexer.cpp lexer.h)
+set(SOURCES main.cpp lexer.cpp lexer.h parser.cpp parser.h)
 
 add_executable(main ${SOURCES})
